--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,10 @@ ext {
 	distPath = "${projectDir}/dist"
 	stardogRepo = project.hasProperty("stardogRepo") ? project.getProperty("stardogRepo") : "http://maven.stardog.com"
 	stardogLib = project.hasProperty("stardogLib") ? project.getProperty("stardogLib") : "."
+
+	guavaVersion = "32.1.3-jre"
+	junitVersion = "4.12"
+	slf4jVersion = "2.0.13"
 }
 
 allprojects {
@@ -40,10 +44,20 @@ subprojects {
 
 	// common deps
 	dependencies {
-		implementation 'org.slf4j:slf4j-api:1.7.12'
-		implementation 'org.slf4j:slf4j-jdk14:1.7.12'
+		implementation("com.google.guava:guava:$guavaVersion") {
+			version {
+				require "$guavaVersion"
+			}
+			attributes {
+				attribute(Attribute.of("org.gradle.jvm.environment", String),"standard-jvm")
+			}
+			exclude group: "com.google.code.findbugs"
+			exclude group: "com.google.guava", module: "failureaccess"
+		}
+		implementation "org.slf4j:slf4j-api:$slf4jVersion"
+		implementation "org.slf4j:slf4j-jdk14:$slf4jVersion"
 
-		testImplementation 'junit:junit:4.12'
+		testImplementation "junit:junit:$junitVersion"
 	}
 
 	sourceSets {
