--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ ext {
 
 	guavaVersion = "32.1.3-jre"
 	junitVersion = "4.12"
+	rdf4jRuntimeVersion = "2.2.4"
 	slf4jVersion = "2.0.13"
 }
 
@@ -61,6 +62,11 @@ subprojects {
 	}
 
 	sourceSets {
+		all {
+			configurations.all {
+				attributes.attribute(Attribute.of("org.gradle.jvm.environment", String), "standard-jvm")
+			}
+		}
 		main {
 			java {
 				srcDir 'main/src'
