--- a/examples/api/build.gradle
+++ b/examples/api/build.gradle
@@ -23,8 +23,10 @@ dependencies {
 
 	// external apis
 	implementation "com.complexible.stardog.rdf4j:stardog-rdf4j-core:${stardogVersion}"
-	implementation "org.eclipse.rdf4j:rdf4j-runtime:2.2.4"
 	implementation "com.complexible.stardog.jena:stardog-jena:${stardogVersion}"
+	implementation("org.eclipse.rdf4j:rdf4j-runtime:${rdf4jRuntimeVersion}") {
+		exclude group: "com.google.guava"
+	}
 }
 
 task execute(type:JavaExec, dependsOn: compileJava) {
